MySql connector dependency added.

--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,7 @@ run {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.8'
 }
+
+dependencies {
+ compile 'mysql:mysql-connector-java:5.1.+'
+}
